# esp32_12832

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini
boards/: esp32-12832.json
components/display/: CMakeLists.txt
components/display/fonts/: ascii_5x8_fonts.c
components/display/include/: display_gfx.h
components/display_gfx/: CMakeLists.txt  display_gfx.c
components/display_gfx/fonts/: ascii_16x32_fonts.c  ascii_8x16_fonts.c
components/display_gfx/include/: display_gfx.h
components/font_manager/: CMakeLists.txt  font_manager.c
components/font_manager/include/: font_manager.h
components/st7567_driver/: CMakeLists.txt  st7567_hw.c
components/st7567_driver/include/: gpio_define.h  st7567_hw.h
docs/协作用/: 启动流程.md  思路.md  指令.md
docs/技术文档/esp32s3/: docs.md
docs/技术文档/思迈微12832-001720A-ST7567-带背光/: 思迈微12832-001720A-ST7567-带背光(1).dwg
docs/技术文档/思迈微12832-001720A-ST7567-带背光/思迈微12832测试程序/: （修改正版）思迈微12864-6030-001788-ST7567-串-CS(3).c
include/: gpio_define.h
include/display_gfx/: display_gfx.h  font.h
include/st7567_driver/: st7567_hw.h
lib/display_gfx/: display_gfx.c
lib/display_gfx/fonts/: ascii_16x32_fonts.c  ascii_5x8_fonts.c  ascii_8x16_fonts.c
lib/st7567_driver/: st7567_hw.c
main/: CMakeLists.txt  main.c
script/font_gen/: README.md  draw_font.py  index.py
src/: CMakeLists.txt  main.c
